# gzdec_GStreamer

./: AUTHORS  NEWS  README  meson.build  test.sh
plugins/: gstgzdec.c  gstgzdec.h  gstgzdecplugin.c  meson.build
tools/: gstgzdec.c  meson.build
